--- a/css/styles.css
+++ b/css/styles.css
@@ -164,10 +164,20 @@ button{
 }
 
 .hero {
-    display:block;
-    background-color:var(--navyblue);
-    padding: 188px 0px;
+    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('./images/images-main/people-office 1.jpg');
+    background-attachment: fixed;
+    background-position: center;
+    height: 600px;
+    width: auto;
 }
+
+
+
+    /* display:block; */
+    /* background-image: ; */
+    /* background-color:var(--navyblue);
+    padding: 188px 0px; */
+
 
 .hero-container{
     display:flex;
