--- a/css/styles.css
+++ b/css/styles.css
@@ -164,9 +164,13 @@ button{
 }
 
 .hero {
-    background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('./images/images-main/people-office 1.jpg');
-    background-attachment: fixed;
+    display:block;
+    background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7)), url('../images/images-main/people-office 1.jpg');
+    /* background-attachment: fixed; */
     background-position: center;
+    background-repeat: no-repeat;
+    justify-items: center;
+    align-items: center;
     height: 600px;
     width: auto;
 }
@@ -193,6 +197,7 @@ button{
     font-weight: 700;
     letter-spacing: 1.12px;
     text-align: center;
+    padding-top: 188px;
 }
 
 .hero-button {
@@ -427,7 +432,7 @@ button{
     text-align: center;
     font-size: 16px;
     font-style: normal;
-    ont-weight: 500;
+    font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.64px;
     display: block;
