--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,7 @@ button{
 }
 
 .hero {
+    background: linear-gradient(rgba(0, 0, 0, 0.7),rgba(0,0,0,0.7)), url('../images/images-main/hero-image.jpg');
     background-position: center;
     background-repeat: no-repeat;
     justify-items: center;
