--- a/css/styles.css
+++ b/css/styles.css
@@ -256,7 +256,8 @@ button{
     font-weight: 500;
     line-height: 24px;
     letter-spacing: 0.4px;
-    padding-bottom:8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
 .services{
