--- a/css/styles.css
+++ b/css/styles.css
@@ -215,8 +215,9 @@ button{
 
 .features{
     display: block;
-    background-color: var(--white);
-    padding:120px 0px;
+    background-color: var(--green);
+    padding: 120px 0;
+    margin-bottom: 0;
    
 }
 
@@ -259,12 +260,10 @@ button{
     padding-top: 8px;
     padding-bottom: 8px;
 }
-
 .services{
     display:block;
     background-color: var(--white);
-    padding-bottom:120px;
-    
+    margin: 120px 0;
 }
 
 .services-container{
