--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,9 @@ img {
     max-width: 100%;
     height: auto;
 }
+* ::after, ::before{
+    box-sizing: border-box;
+}
 
 h1,
 h2,
@@ -109,9 +112,10 @@ a {
 
 .nav-list-item {
     list-style: none;
+    position: relative;
 }
 
-.nav-list-link {
+.nav-list-item-link {
     color: var(--navyblue);
     font-size: 16px;
     font-style: normal;
@@ -119,8 +123,20 @@ a {
     line-height: 24px;
     letter-spacing: 0.32px;
 }
-
-.nav-list-link:hover {
+.nav-list-item-link::after{
+    content:'';
+    width:0;
+    height:4px;
+    background-color: var(--ocean);
+    border-radius: 2px;
+    position:absolute;
+    left:0;
+    bottom:-26px;
+}
+.nav-list-item:hover .nav-list-item-link::after{
+    width: 100%;
+}
+.nav-list-item-link:hover, .nav-list-item-link::after {
     color: var(--ocean);
 }
 
