--- a/css/styles.css
+++ b/css/styles.css
@@ -416,27 +416,40 @@ button{
 .customers-list {
     display:flex;
     list-style: none;
-    width:100%;
+    /* width:100%; */
     justify-content: center;
-    gap: 24px;
-   
+    align-items: center;
+    gap: 24px; 
 }
-
-.customer-list-link{
-    display:flex;
-    align-items:center;
-    justify-content: center;
+.customer-icon{
+    display: block;
     width: 168px;
     height: 88px;
-    background-color: var(--white);
+    fill: currentColor;
+}
+
+.customers-list-item{
     border: 1px solid var(--lightslate);
     border-radius: 4px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color:var(--lightslate);
 }
-.customer-list-link svg{
-    width: 104px;
-    height: 56px;
-    align-items: center;
-    justify-content: center;
+
+.customers-list-item:hover{
+    border-color: var(--ocean);
+}
+
+.customers-list-item-link{
+    color: var(--lightslate);
+}
+
+.customers-list-item:hover .customers-list-item-link{
+    color: var(--ocean);
+}
+
+.customers-list-item-link svg{
+   padding:16px 32px;
+    
 }
 
 .footer{
