--- a/css/styles.css
+++ b/css/styles.css
@@ -629,7 +629,12 @@ background-color: var(--green);
     border: 1px solid var(--cornflower);
     background: var(--white);
 }
+.online-app-list-item:hover{
+    border: 1px solid var(--CLOUD, #F4F4FD);
+    background: var(--WHITE, #FFF);
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 
+}
 .online-app-list-title{
     padding-top:32px;
 }
