--- a/css/styles.css
+++ b/css/styles.css
@@ -396,7 +396,7 @@ button{
     
 }
 .team-list-link:hover{
-   background-color: var(--green);
+   background-color: var(--ocean);
 }
 .team-list-link svg{
     fill: var(--cloud);
